Mise à jour de l'affichage des logos sur mobiles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="hero-content container mx-auto">
             <div class="hero-inner text-center">
                 <h1 class="hero-title">
-                    Le rendez-vous de l'année : Un Réveil de Foi, de Joie et de Musique !
+                    Le rendez-vous de l'année : <br>
+                    Un Réveil de Foi, de Joie et de Musique !
                 </h1>
                 <p class="hero-subtitle"
                     style="max-width:900px; margin: 0.8rem auto 1.4rem; color: rgba(255,255,255,0.92); font-weight:500;">
@@ -70,13 +71,13 @@
     <div class="Presentation">
         <h1> Au Programme: </h1>
         <ul>
-            <li> -Live Music : Des groupes talentueux et des artistes invités pour des prestations inédites qui feront
+            <li> <strong>-Live Music :</strong>Des groupes talentueux et des artistes invités pour des prestations inédites qui feront
                 vibrer la salle.</li>
-            <li>-Jeux et Interaction : Des moments fun et des jeux qui mettront votre esprit d'équipe à l'épreuve.
+            <li><strong>-Jeux et Interaction :</strong> Des moments fun et des jeux qui mettront votre esprit d'équipe à l'épreuve.
             </li>
-            <li>-Des messages courts et impactants délivrés par nos orateurs, destinés à renouveler notre foi, inspirer
+            <li><strong>-Partages : </strong> Des messages courts et impactants délivrés par nos orateurs, destinés à renouveler notre foi, inspirer
                 nos actions et célébrer la période bénie de la Nativité. </li>
-            <li>-Cérémonie "Spécial Noël": Allumage traditionnel et simultané des cierges magiques (petits feux étoilés)
+            <li> <Strong>-Cérémonie "Spécial Noël": </strong> Allumage traditionnel et simultané des cierges magiques (petits feux étoilés)
                 pour célébrer le passage à Noël. Un moment festif et lumineux pour échanger des vœux et démarrer le jour
                 de Noël </li>
         </ul>
